# alluvium

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
alluvium/: __init__.py  builtin_agent.py  cli.py  config.py  daemon.py  fsqueue.py  gitops.py  prompts.py  store.py  util.py  worker.py
inbox_swarm/: __init__.py  builtin_agent.py  cli.py  config.py  daemon.py  fsqueue.py  gitops.py  prompts.py  util.py  worker.py
tests/: test_alluvium.py  test_inbox_swarm.py
