[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-inbox"
version = "0.1.0"
description = "A local-first free-form task inbox daemon for concurrent coding agents, Git worktrees, integration, and knowledge synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Inbox Swarm Contributors" }
]
keywords = ["agents", "automation", "git", "worktree", "task-queue", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: System :: Distributed Computing"
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
swarm-inbox = "inbox_swarm.cli:main"
inbox-swarm = "inbox_swarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["inbox_swarm"]

[tool.hatch.build.targets.sdist]
include = [
  "inbox_swarm",
  "tests",
  "README.md",
  "LICENSE",
  "AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
